Update resumes and replace dashboard image

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
             </a>
           </div>
           <div class="cta-buttons">
-            <a href="#" class="btn" data-translate="download">Download CV</a>
+            <a href="#" class="btn" id="download-cv" data-translate="download">Download CV</a>
             <a href="#contact" class="btn btn-outline" data-translate="contact">Contact Me</a>
           </div>
         </div>
@@ -243,7 +243,7 @@
             </div>
           </div>
           <div class="portfolio-item">
-            <img src="/images/Dashboard-1.webp" alt="Business Intelligence Dashboards" loading="lazy" />
+            <img src="/assets/Dashboard.jpeg" alt="Dashboard Project" loading="lazy">
             <div class="portfolio-overlay">
               <h3 data-translate="portfolioItems.dashboards.title">Dashboards</h3>
               <p data-translate="portfolioItems.dashboards.description">Interactive business intelligence dashboards created with PowerBI, providing real-time insights and data visualization for informed decision-making.</p>
