--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       <img src="/images/LOGO_v1.png" alt="Michael Dambock Logo" class="logo-img" width="50" height="50" loading="eager" />
       <span class="header-name">Michael Dambock</span>
       <span class="construction-notice" data-translate="underConstruction">This website is currently under construction.</span>
+      <span class="version-number">v1.0.6</span>
     </div>
 
     <div class="header-right">
@@ -240,6 +241,10 @@
             <div class="portfolio-overlay">
               <h3 data-translate="portfolioItems.webDesign.title">Website Design</h3>
               <p data-translate="portfolioItems.webDesign.description">Modern, responsive website development with focus on user experience and performance.</p>
+              <a href="https://github.com/dammi01/Homepage" target="_blank" class="portfolio-link">
+                <i class='bx bxl-github'></i>
+                <span>View Source</span>
+              </a>
             </div>
           </div>
           <div class="portfolio-item">
@@ -305,6 +310,7 @@
   </footer>
 
   <!-- Scripts -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="module" src="/js/main.js"></script>
 </body>
 </html>
