--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <img src="/images/LOGO_v1.png" alt="Michael Dambock Logo" class="logo-img" width="50" height="50" loading="eager" />
       <span class="header-name">Michael Dambock</span>
       <span class="construction-notice" data-translate="underConstruction">This website is currently under construction.</span>
-      <span class="version-number">v1.0.7</span>
+      <span class="version-number" id="version-number"></span>
     </div>
 
     <div class="header-right">
@@ -356,5 +356,13 @@
   <!-- Scripts -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="module" src="/js/main.js"></script>
+  <script>
+    fetch('/package.json')
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('version-number').innerText = `v${data.version}`;
+      })
+      .catch(error => console.error('Error fetching version:', error));
+  </script>
 </body>
 </html>
