Updating the version number in the index html (v1.0.50)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <img src="/Homepage/assets/LOGO_v1-6c9a5721.png" alt="Michael Dambock Logo" class="logo-img" width="50" height="50" loading="eager" />
       <span class="header-name">Michael Dambock</span>
       <span class="construction-notice" data-translate="underConstruction">This website is currently under construction.</span>
-      <span class="version-number" id="version-number"></span>
+      <span class="version-number" id="version-number">1.0.50</span>
     </div>
 
     <div class="header-right">
